# wlrston

./: .gitignore  meson.build  meson_options.txt
desktop-shell/: desktop-shell.c  desktop-shell.h  meson.build  xdg.c
include/: server.h  view.h  wlrston-plugin.h  wlrston.h
protocol/: meson.build
src/: cursor.c  keyboard.c  main.c  meson.build  output.c  seat.c  server.c  server2.c  view.c  xdg.c
